--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <!-- Scripts -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/evil-icons@1.9.0/assets/evil-icons.min.css">
   <script src="https://cdn.jsdelivr.net/npm/evil-icons@1.9.0/assets/evil-icons.min.js"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script src='extras.js'></script>
   <script>
   $(document).ready(function(){
   ScrollReveal().reveal('p',{ delay: 400 });
