--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id='chunk-container'>
     <img src="imgs/IMG_0675.PNG">
 <div id="intro">
-<img src="imgs/kayla_7.gif">
+<img src="https://github.com/wiggikay/KWHome/blob/master/imgs/Kayla_7.gif?raw=true">
 <p>University of Michigan <span>&#183;</span> Computer Science Major <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
 <img class='succ' src="imgs/succulent.png">
 </div>
