--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </div>
 
 <div id='resume'>
-<h1> Resume</h1>
-<p>Want info on my skills and experience? Check out my resume <a href="Kayla Wiggins CV 2019-pdf.pdf">here.</a></p>
+<h1>Resume & CV</h1>
+<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019-pdf.pdf">here.</a> Or my resume <a href="Kayla Wiggins Resume 2018.pdf">here.</a></p>
 </div>
 </div>
 
