--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <div id='resume'>
 <h1>Resume & CV</h1>
-<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019-pdf.pdf">here.</a> Or my resume <a href="Kayla Wiggins Resume 2018.pdf">here.</a></p>
+<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019-pdf.pdf">here.</a> Or my resume <a href="https://github.com/wiggikay/KWHome/raw/master/Kayla_Wiggins_Resume_2018.pdf">here.</a></p>
 </div>
 </div>
 
