--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </script>
 <style>
 .icon {
-  fill: ghostwhite;
+  fill: black;
 }
 
 .icon:hover {
@@ -31,14 +31,14 @@
 <body>
   <div id="body-container">
   <div id='chunk-container'>
-    <img src="imgs/IMG_0675.PNG">
+    <img src="imgs/14079538_10206839724534790_5396252544536444339_n.jpg">
 <div id="intro">
-<img src="https://github.com/wiggikay/KWHome/blob/master/imgs/Kayla_7.gif?raw=true">
+<h2>Kayla Wiggins</h2>
 <p>University of Michigan <span>&#183;</span> Computer Science Major <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
 <img class='succ' src="imgs/succulent.png">
 </div>
 
-<img src="imgs/299D0833-588F-495F-B914-1F20A1F459B0.jpeg">
+
 </div>
 
 <div id="intro-container">
