--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div id="intro-container">
 <h1>About Me</h1>
 <p> Hey there, thank you for visiting my profolio site. My name is Kayla Wiggins
-  and I'm currently a sophomore at the University of Michigan! I'm studying to get my
+  and I'm currently a Junior at the University of Michigan! I'm studying to get my
   bachelor's degree in Computer Science with a focus on cybersecurity. When not in class,
   I typically spend my time cooking, gardening (when the weather allows), and working in the lab. Ask me about my
   chocolate chip banana bread recipe, my favorite succulent species, or how much I hate poorly documented repositories!</p>
@@ -77,7 +77,7 @@
 
 <div id='resume'>
 <h1>Resume & CV</h1>
-<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019-pdf.pdf">here.</a> Or my resume <a href="https://github.com/wiggikay/KWHome/raw/master/Kayla_Wiggins_Resume_2018.pdf">here.</a></p>
+<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019-pdf.pdf">here.</a> Or my resume <a href="Kayla Wiggins Resume 2019-.pdf">here.</a></p>
 </div>
 </div>
 
