Major overhaul to update pdfs images and major information. Also fixed some bugs

--- a/index.html
+++ b/index.html
@@ -11,31 +11,16 @@
   <script src="https://cdn.jsdelivr.net/npm/evil-icons@1.9.0/assets/evil-icons.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script>
-  $(document).ready(function(){
-  ScrollReveal().reveal('p',{ delay: 400 });
-  ScrollReveal().reveal('img',{ delay: 400 });
-  ScrollReveal().reveal('.icon',{ delay: 400 });
-});
-</script>
-<style>
-.icon {
-  fill: black;
-}
-
-.icon:hover {
-  fill: #D66853;
-}
-</style>
+  <script src="motor.js"></script>
 </head>
 <body>
   <div id="body-container">
   <div id='chunk-container'>
-    <img src="imgs/14079538_10206839724534790_5396252544536444339_n.jpg">
+    <img src="imgs/IMG_0433.jpg">
 <div id="intro">
 <h2>Kayla Wiggins</h2>
-<p>University of Michigan <span>&#183;</span> Computer Science Major <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
-<img class='succ' src="imgs/succulent.png">
+<p>University of Michigan <span>&#183;</span> Film Television & Media <span>&#183;</span> Pre-Information Science & Post Computer Science <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
+<img class='succ'>
 </div>
 
 
@@ -43,11 +28,9 @@
 
 <div id="intro-container">
 <h1>About Me</h1>
-<p> Hey there, thank you for visiting my profolio site. My name is Kayla Wiggins
-  and I'm currently a Junior at the University of Michigan! I'm studying to get my
-  bachelor's degree in Computer Science with a focus on cybersecurity. When not in class,
-  I typically spend my time cooking, gardening (when the weather allows), and working in the lab. Ask me about my
-  chocolate chip banana bread recipe, my favorite succulent species, or how much I hate poorly documented repositories!</p>
+<p> Hey there, thank you for visiting my portfolio site. My name is Kayla Wiggins and I'm currently a Junior at the University of Michigan!
+  The first major in my dual degree is in Film Television & Media, and I'm currently in the process of transitioning from a second major in Computer Science to one in Information Science, so my curriculum and interests currently reflect many disciplines. 
+  If all that seems confusing then try having different realizations about what you want to do with your life three times in one year! Anyway, when not in a class, I typically spend my time playing games, taking care of my plants, working in the lab and watching movies with my friends! Ask me about the best bad movies, my favorite succulent species, or how much I hate poorly documented git repositories!</p>
 </div>
 <div id='projects-container'>
   <h1>Research</h1>
@@ -70,14 +53,14 @@
   <div class="ani-talk">
     <h1>Animation</h1>
     <p>I learned Adobe Photoshop, After Effects, and Premier Pro in Animation for Non-majors and made some pretty cool
-    stuff. Check out my profolio <a href="https://vimeo.com/user92674862">here.</a> </p>
+    stuff. Check out that stuff <a href="https://vimeo.com/user92674862">here.</a> </p>
   </div>
 
 </div>
 
 <div id='resume'>
 <h1>Resume & CV</h1>
-<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019-pdf.pdf">here.</a> Or my resume <a href="Kayla Wiggins Resume 2019-.pdf">here.</a></p>
+<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019.pdf">here.</a> Or my resume <a href="Kayla Wiggins Resume 2019-.pdf">here.</a></p>
 </div>
 </div>
 
@@ -86,7 +69,9 @@
 <a href="mailto:wiggikay@umich.edu" target="_top">
 <div data-icon="ei-envelope" data-size="l"></div>
 </a>
+<a href="https://github.com/wiggikay">
 <div data-icon="ei-sc-github" data-size="l"></div>
+</a>
 <a href="https://www.linkedin.com/in/kayla-wiggins-499b18144/">
 <div data-icon="ei-sc-linkedin" data-size="l"></div>
 </a>
