--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <div id="intro-container">
 <h1>About Me</h1>
-<p> Hey there, thank you for visiting my portfolio site. My name is Kayla Wiggins and I'm currently a Junior at the University of Michigan!
-  The first major in my dual degree is in Film Television & Media, and I'm currently in the process of transitioning from a second major in Computer Science to one in Information Science, so my curriculum and interests currently reflect many disciplines. 
-  If all that seems confusing then try having different realizations about what you want to do with your life three times in one year! Anyway, when not in a class, I typically spend my time playing games, taking care of my plants, working in the lab and watching movies with my friends! Ask me about the best bad movies, my favorite succulent species, or how much I hate poorly documented git repositories!</p>
+<p> Hey there, thank you for visiting my portfolio site. My name is Kayla Wiggins and I'm a Junior at the University of Michigan!
+  I'm currently in the process of transitioning from a major in Computer Science to one in Information Science. I'm also pursuing a minor in Film Television & Media, so my curriculum and interests reflect many disciplines.
+  When not in a class, I typically spend my time playing video games, taking care of my plants, working in the lab and watching movies with my friends! Ask me about the best bad movies, my favorite succulent species, or how much I hate poorly documented git repositories!</p>
 </div>
 <div id='projects-container'>
   <h1>Research</h1>
