--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="imgs/IMG_0433.jpg">
 <div id="intro">
 <h2>Kayla Wiggins</h2>
-<p>University of Michigan <span>&#183;</span> Film Television & Media <span>&#183;</span> Pre-Information Science & Post Computer Science <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
+<p>University of Michigan <span>&#183;</span> Film Television & Media <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
 <img class='succ'>
 </div>
 
@@ -29,8 +29,8 @@
 <div id="intro-container">
 <h1>About Me</h1>
 <p> Hey there, thank you for visiting my portfolio site. My name is Kayla Wiggins and I'm a Junior at the University of Michigan!
-  I'm currently in the process of transitioning from a major in Computer Science to one in Information Science. I'm also pursuing a minor in Film Television & Media, so my curriculum and interests reflect many disciplines.
-  When not in a class, I typically spend my time playing video games, taking care of my plants, working in the lab and watching movies with my friends! Ask me about the best bad movies, my favorite succulent species, or how much I hate poorly documented git repositories!</p>
+   I'm pursuing a major in Film Television & Media, and I also have a huge interest in programming and HCI. I'm currently binging the Reply All podcast and highly reccommend it to anyone intrested in the intersection between humanity and technology. They report stories about everything from email scams to internet memes I absolutely love it. Anyway,
+  When not in a class, I typically spend my time playing video games, taking care of my plants, working in the lab and watching movies with my friends. Ask me for more podcast reccommendations or about much I hate poorly documented git repositories!</p>
 </div>
 <div id='projects-container'>
   <h1>Research</h1>
@@ -51,16 +51,16 @@
 <div id='animation'>
   <img src="imgs/project3KaylaWiggins.gif">
   <div class="ani-talk">
-    <h1>Animation</h1>
-    <p>I learned Adobe Photoshop, After Effects, and Premier Pro in Animation for Non-majors and made some pretty cool
-    stuff. Check out that stuff <a href="https://vimeo.com/user92674862">here.</a> </p>
+    <h1>Animation and Film Projects</h1>
+    <p>I learned Adobe Photoshop, After Effects, and Premiere Pro in Animation for Non-majors and made some pretty fun
+    stuff. I've also done some short projects for production classes, which will be added soon. Check out that stuff <a href="https://vimeo.com/user92674862">here.</a> </p>
   </div>
 
 </div>
 
 <div id='resume'>
-<h1>Resume & CV</h1>
-<p>Want info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV 2019.pdf">here.</a> Or my resume <a href="Kayla Wiggins Resume 2019-.pdf">here.</a></p>
+<h1>More Information</h1>
+<p>Looking for info on my skills and experience? Check out my CV <a href="Kayla Wiggins CV BSI 2020.pdf">here.</a></p>
 </div>
 </div>
 
