--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="imgs/IMG_0433.jpg">
 <div id="intro">
 <h2>Kayla Wiggins</h2>
-<p>University of Michigan <span>&#183;</span> Film Television & Media <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
+<p>University of Michigan <span>&#183;</span> Film Television & Media <span>&#183;</span> Information <span>&#183;</span> CroMa Lab Undergraduate Researcher</p>
 <img class='succ'>
 </div>
 
@@ -29,8 +29,8 @@
 <div id="intro-container">
 <h1>About Me</h1>
 <p> Hey there, thank you for visiting my portfolio site. My name is Kayla Wiggins and I'm a Junior at the University of Michigan!
-   I'm pursuing a major in Film Television & Media, and I also have a huge interest in programming and HCI. I'm currently binging the Reply All podcast and highly reccommend it to anyone intrested in the intersection between humanity and technology. They report stories about everything from email scams to internet memes I absolutely love it. Anyway,
-  When not in a class, I typically spend my time playing video games, taking care of my plants, working in the lab and watching movies with my friends. Ask me for more podcast reccommendations or about much I hate poorly documented git repositories!</p>
+   I'm pursuing a double major in Film Television & Media and Information. I also have a huge interest in programming and HCI. I'm currently binging the Reply All podcast and highly reccommend it to anyone intrested in the intersection between humanity and technology. I'm also currently a Media Design Fellow for U of M's Academic Innovation
+   and in the past I've done HCI research for CroMa Lab. When I'm not coding/editing/researching/designing, I typically spend my time playing video games, watching movies or kayaking when it's warm.</p>
 </div>
 <div id='projects-container'>
   <h1>Research</h1>
