--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
 
-  <script src="operate.js"></script>
   <script src="anime-master/lib/anime.min.js"></script>
+  <script src="preloader.js"></script>
+  <script src="operate.js"></script>
   <script src="motor.js"></script>
 </head>
 <body>
-<div id="preload-01"></div>
-<div id="preload-02"></div>
-<div id="preload-03"></div>
-<div id="preload-04"></div>
+
+  <div class="preloader-wrapper">
+      <div class="preloader">
+          <img src="imgs/91.svg" alt="Loading...">
+      </div>
+  </div>
+
 <div id="opener">
 <div id="nameside">
 <h1 class="title">Kayla Wiggins</h1>
   <p class="subtitle" style="color: #7A4419">Undergraduate at University of Michigan’s School of Information</p>
-  <button type="button"><a href="Kayla Wiggins CV BSI 2020.pdf">CV</a></button>
 </div>
 <div class="card c1"></div>
 <div class="card c2"></div>
